# zimprep

./: .dockerignore  .gitignore  CLAUDE.md  package-lock.json  package.json  railway.json  railway.toml  refrance.md  validation_output_final.txt
backend/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  IMPLEMENTATION_SUMMARY.md  PHASE_FIVE_COMPLETE.md  PHASE_SEVEN_STATUS.md  PHASE_SIX_STATUS.md  PHASE_THREE_STATUS.md  QUICKSTART.md  action4_results.txt  bug_report.json  capture_server_output.py  debug_output.txt  docker-compose.dev.yml  docker-compose.staging.yml  docker-compose.yml  error.txt  error_log.txt  inspect_data.py  inspect_questions_col.py  inspect_zimprep_db.py  lifespan_test.py  lifespan_test_output.txt  list_dbs.py  list_dbs_simple.py  main.py  migrate_optional.py  minimal_test.py  mypy.ini  pyproject.toml  pytest.ini  quick_verify_b3.py  railway.toml  requirements.txt  run_with_trace.py  seed_evidence.py  server_full_log.txt  server_log.txt  simple_test.py  (+17 more)
backend/app/: __init__.py  compat_patch.py  main.py
backend/core/: config.py
backend/db/: client.py  models.py  models_subscription.py
backend/docs/: ACTIVATION_GUIDE.md  DEPLOYMENT.md  ENDPOINT_REGISTRATION.md  MONGODB_SETUP.md  PHASE3_SETUP.md  PHASE_TWO_SUMMARY.md  PRODUCTION_DEPLOYMENT.md
backend/logs/: output.txt  test_output_registry.txt  test_results.txt
backend/routers/: admin.py  attempts.py  employees.py  papers.py  parents.py  sessions.py  students.py  subscriptions.py  waitlist.py  webhooks.py
backend/routes/: admin.py  attempts.py  catalog.py  marking.py  ocr.py  (+3 more)
(+781 files in other folders)
