[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "zimprep-backend"
version = "1.0.0"
description = "ZimPrep - National-scale exam preparation platform with AI-powered marking"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {text = "Proprietary"}
authors = [
    {name = "ZimPrep Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "mypy>=1.0.0",
]
